--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
         align-items: center;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        /* IRIS */
         color: #4D5AE5;
         }
           
@@ -72,7 +71,6 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
-        /* NAVY BLUE */
         color: #2E2F42;
     }
     .header-link:hover,
@@ -239,3 +237,96 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
     height: 310px;
     left: 0px;
    }
+
+   /*-------Portfolio--------*/
+.root{
+    --button-text-color:#4D5AE5;
+    --primary-text-color:#2E2F42;
+    --titel-text-color:#434455;
+}
+body{
+
+}
+
+.navigation-button {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        color: #4D5AE5;
+        background-color: #F4F4FD;
+        cursor: pointer;
+       }
+
+.navigation-button:hover{
+    color:#FFFFFF;
+    background-color:#404BBF;
+}
+/*sections*/
+.section{} 
+
+
+.list {}
+
+.list-item {
+
+}
+
+.list-titel {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 12;
+    letter-spacing: 0.02em; 
+    color: var(--titel-text-color)}
+
+.list-subtitel {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 15;
+       letter-spacing: 0.02em;
+        color: var(--primary-text-color);
+}
+/*footer*/
+
+
+.footer-logo {
+
+    font-family: 'Raleway'
+        font-weight: 800;
+    font-size: 18px;
+    line-height: 1.33;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    /* IRIS */
+    color: #4D5AE5;
+}
+
+.footer-logo span {
+    color: #F4F4FD;
+
+}
+
+
+.link {}
+
+.footer-subtitel {
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 15%;
+    letter-spacing: 0.02em;
+    color: #E7E9FC;
+}
+
+.footer {
+    background-color: #2E2F42;
+    height: 310px;
+    left: 0px;
+}
